fixed main display layout, focusing on smaller details and then carousel

--- a/Ikea FEC/Client/src/styles/app.css
+++ b/Ikea FEC/Client/src/styles/app.css
@@ -17,3 +17,8 @@
   display: flex;
   justify-content: center;
 }
+
+.display{
+  display: flex;
+  justify-content: center;
+}
