--- a/Ikea FEC/Client/src/styles/description.css
+++ b/Ikea FEC/Client/src/styles/description.css
@@ -8,8 +8,9 @@
 
 .layout{
   display: block;
-  position: fixed;
-  right: 300px;
+  position: relative;
+  float: right;
+  right: 50px;
 }
 
 .title{
@@ -53,7 +54,14 @@
 
 .reviewLayout{
   display: flex;
-  justify-content: space-around;
+  justify-content: flex-start;
+}
+
+.description{
+  line-height: 18px;
+  color: #333;
+  padding-bottom: 15px;
+  font-size: 13px;
 }
 
 .quantity{
