--- a/Ikea FEC/Client/src/styles/mainDisplay.css
+++ b/Ikea FEC/Client/src/styles/mainDisplay.css
@@ -4,3 +4,9 @@
 
 
 }
+
+.layout2{
+  display: block;
+  float: right;
+  padding: 0;
+}
